fixed the more info not showing on all pages. and also fixed the mobile navbar to go behind

--- a/client/src/Global/Components/MovieInformation/_movieInformation.scss
+++ b/client/src/Global/Components/MovieInformation/_movieInformation.scss
@@ -4,7 +4,7 @@
   width: 100vw;
   height: 100vh;
   background: rgba(0, 0, 0, 0.692);
-  z-index: 100;
+  z-index: 2000;
   overflow: hidden;
   overflow-y: scroll;
 }
